--- a/app/src/main/res/layout/item_graph_buble.xml
+++ b/app/src/main/res/layout/item_graph_buble.xml
@@ -19,12 +19,12 @@
         app:contentPadding="0dp">
 
     </android.support.v7.widget.CardView>
-    <lecho.lib.hellocharts.view.PieChartView
+    <lecho.lib.hellocharts.view.BubbleChartView
         android:layout_width="match_parent"
         android:layout_height="250dp"
         android:layout_margin="20dp"
         android:scaleType="fitXY"
-        android:id="@+id/chart"
+        android:id="@+id/chartBuble"
         android:src="@drawable/scr_pie1"
         android:background="@null"
         android:layout_gravity="center" />
