--- a/app/src/main/res/layout/item_graph_pie.xml
+++ b/app/src/main/res/layout/item_graph_pie.xml
@@ -24,7 +24,7 @@
         android:layout_height="250dp"
         android:layout_margin="20dp"
         android:scaleType="fitXY"
-        android:id="@+id/chart"
+        android:id="@+id/chartPie"
         android:src="@drawable/scr_pie1"
         android:background="@null"
         android:layout_gravity="center" />
