--- a/app/src/main/res/layout/item_graph_bar.xml
+++ b/app/src/main/res/layout/item_graph_bar.xml
@@ -19,7 +19,7 @@
         app:contentPadding="0dp">
 
     </android.support.v7.widget.CardView>
-    <lecho.lib.hellocharts.view.PieChartView
+    <lecho.lib.hellocharts.view.ColumnChartView
         android:layout_width="match_parent"
         android:layout_height="250dp"
         android:layout_margin="20dp"
