--- a/app/src/main/res/layout/item_graph_pie.xml
+++ b/app/src/main/res/layout/item_graph_pie.xml
@@ -41,7 +41,7 @@
         android:layout_gravity="left|top" />
 
     <ImageButton
-        android:id="@+id/btnUpdate"
+        android:id="@+id/btnUpdatePie"
         android:layout_width="75dp"
         android:layout_height="75dp"
         android:scaleType="fitXY"
