--- a/app/src/main/res/layout/item_label.xml
+++ b/app/src/main/res/layout/item_label.xml
@@ -16,4 +16,119 @@
         android:layout_marginTop="@dimen/cardMarginVertical"
         app:cardPreventCornerOverlap="false"
         app:contentPadding="0dp"></android.support.v7.widget.CardView>
+
+    <LinearLayout
+        android:layout_width="100dp"
+        android:layout_height="50dp"
+        android:gravity="center"
+        android:orientation="horizontal"
+        android:layout_gravity="left|top">
+
+        <Button
+            style="?android:attr/buttonStyleSmall"
+            android:layout_width="15dp"
+            android:layout_height="15dp"
+            android:background="#00f48e"
+            android:id="@+id/colorLunes" />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="LUNES"/>
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="100dp"
+        android:layout_height="50dp"
+        android:gravity="center"
+        android:orientation="horizontal"
+        android:layout_gravity="left|bottom">
+
+        <Button
+            style="?android:attr/buttonStyleSmall"
+            android:layout_width="15dp"
+            android:layout_height="15dp"
+            android:background="#00f48e"
+            android:id="@+id/colorMartes" />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="MARTES"/>
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="100dp"
+        android:layout_height="50dp"
+        android:gravity="center"
+        android:orientation="horizontal"
+        android:layout_gravity="center|top">
+
+        <Button
+            style="?android:attr/buttonStyleSmall"
+            android:layout_width="15dp"
+            android:layout_height="15dp"
+            android:background="#00f48e"
+            android:id="@+id/colorMiercoles" />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="MIERCOLES"/>
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="100dp"
+        android:layout_height="50dp"
+        android:gravity="center"
+        android:orientation="horizontal"
+        android:layout_gravity="center|bottom">
+
+        <Button
+            style="?android:attr/buttonStyleSmall"
+            android:layout_width="15dp"
+            android:layout_height="15dp"
+            android:background="#00f48e"
+            android:id="@+id/colorJueves" />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="JUEVES"/>
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="100dp"
+        android:layout_height="50dp"
+        android:gravity="center"
+        android:orientation="horizontal"
+        android:layout_gravity="right|top">
+
+        <Button
+            style="?android:attr/buttonStyleSmall"
+            android:layout_width="15dp"
+            android:layout_height="15dp"
+            android:background="#00f48e"
+            android:id="@+id/colorViernes" />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="VIERNES"/>
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="100dp"
+        android:layout_height="50dp"
+        android:gravity="center"
+        android:orientation="horizontal"
+        android:layout_gravity="right|bottom">
+
+        <Button
+            style="?android:attr/buttonStyleSmall"
+            android:layout_width="15dp"
+            android:layout_height="15dp"
+            android:background="#00f48e"
+            android:id="@+id/colorSabado" />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="SABADO"/>
+    </LinearLayout>
+
 </FrameLayout>
