--- a/app/src/main/res/layout/item_graph_dependency.xml
+++ b/app/src/main/res/layout/item_graph_dependency.xml
@@ -19,15 +19,35 @@
         app:contentPadding="0dp">
 
     </android.support.v7.widget.CardView>
-    <lecho.lib.hellocharts.view.PieChartView
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_margin="20dp"
-        android:scaleType="fitXY"
-        android:id="@+id/chartDependency"
-        android:src="@drawable/scr_pie1"
-        android:background="@null"
-        android:layout_gravity="center" />
+        android:layout_gravity="center|center"
+        android:orientation="vertical"
+
+    android:weightSum="2">
+        <lecho.lib.hellocharts.view.LineChartView
+            android:id="@+id/chart_top"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1" >
+        </lecho.lib.hellocharts.view.LineChartView>
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="2dp"
+            android:layout_marginBottom="8dp"
+            android:layout_marginTop="8dp"
+            android:background="@android:color/darker_gray" />
+
+        <lecho.lib.hellocharts.view.ColumnChartView
+            android:id="@+id/chart_bottom"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1" >
+        </lecho.lib.hellocharts.view.ColumnChartView>
+    </LinearLayout>
+
 
     <ImageButton
         android:layout_width="75dp"
