--- a/app/src/main/res/layout/item_label_pie.xml
+++ b/app/src/main/res/layout/item_label_pie.xml
@@ -33,7 +33,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text=" "/>
+            android:text="LUNES"/>
     </LinearLayout>
 
     <LinearLayout
@@ -52,7 +52,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text=" "/>
+            android:text="MARTES"/>
     </LinearLayout>
 
     <LinearLayout
@@ -71,7 +71,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text=" "/>
+            android:text="MIERCOLES"/>
     </LinearLayout>
 
     <LinearLayout
@@ -90,7 +90,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text=" "/>
+            android:text="JUEVES"/>
     </LinearLayout>
 
     <LinearLayout
@@ -109,7 +109,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text=" "/>
+            android:text="VIERNES"/>
     </LinearLayout>
 
     <LinearLayout
@@ -128,7 +128,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text=" "/>
+            android:text="SABADO"/>
     </LinearLayout>
 
 </FrameLayout>
